--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.5",
     "lucide-react": "^0.477.0",
